--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="/src/imagens/avatar.png" style="width:100%" alt="Avatar">
+          <img src="./src/imagens/avatar.png" style="width:100%" alt="Avatar">
           <div class="w3-display-center w3-container w3-text-blue">
             <h2>Ricardo Henrique da Silva Lyra</h2>
           </div>
